--- a/AdventOfCode_2021_Day20.Rmd
+++ b/AdventOfCode_2021_Day20.Rmd
@@ -107,3 +107,267 @@ for (i in 1:50) {
 dmw %>% sum()
 ```
 
+# Day 21: Dirac Dice
+
+A die rolls deterministically starting at 1, incrementing to 100, then circling back to 1.
+
+We'll make some functions to simulate three rolls of the dice
+```{r}
+require(tidyverse)
+die <- list('last'=100, 'vals'=c(0,0,0), 'rolls'=0)
+class(die) <- 'Die'
+
+roll <- function(object, ...) UseMethod('roll')
+
+roll.Die <- function(object, last) {
+  if (missing(last)) {
+    last <- object$last
+  }
+  last <- last + 1
+  r <- last:(last+2)
+  r[r > 100] <- r[r > 100] - 100
+  object$vals <- r
+  object$last <- r[3]
+  object$rolls <- object$rolls + 3
+  return(object)
+}
+
+player <- list('start'=1, 'position'=1, 'score'=0)
+class(player) <- 'Player'
+
+
+init <- function(object, ...) UseMethod('init')
+move <- function(object, ...) UseMethod('move')
+
+init.Player <- function(object, start=1) {
+  object$start <- start
+  object$position <- start
+  object$score <- 0
+  return(object)
+}
+
+move.Player <- function(object, d=die) {
+  # get rolls
+  d <- roll(d)
+  rsum <- sum(d$vals)
+  # shift position
+  pos <- object$position + rsum
+  if (pos > 10) {
+    pos <- pos %% 10
+    if (pos == 0) pos <- 10
+  }
+  object$position <- pos
+  object$score <- object$score + pos
+  out <- list('player'=object, 'die'=d)
+  return(out)
+}
+```
+
+```{r}
+d <- die
+player1 <- init(player, start=7)
+player2 <- init(player, start=3)
+```
+
+```{r}
+winner <- FALSE
+while (!winner) {
+  res <- move(player1, d)
+  player1 <- res$player
+  d <- res$die
+  if (player1$score > 999) {
+    winner <- TRUE
+    print('Player 1 wins!')
+  } else {
+    res <- move(player2, d)
+    d <- res$die
+    player2 <- res$player
+  }
+  if (player2$score > 999) {
+    winner <- TRUE
+    print('Player 2 wins!')
+  } 
+}
+```
+
+```{r}
+player2$score * d$rolls
+```
+
+## Part 2: Dirac dice
+Now the die has 3 sides. We play until one player reaches 21. Of all possible games, how many games does Player 1 win and how many does player 2 win.
+
+Hmmm...that's a lot of possibilities. Let's start with how many different results we could get from 3 rolls
+* 3 : 1 (111)
+* 4 : 3 (112, 121, 211)
+* 5 : 4 (122, 212, 221, 113, 131, 331)
+* 6 : 7 (222, 123, 321, 213, 231, 312, 132)
+* 7 : 4 (322, 232, 233, 133, 313, 311)
+* 8 : 3 (332, 323, 233)
+* 9 : 1 (333)
+
+So, of the 27 possible rolls, there are really only 7 possible outcomes
+
+```{r}
+possibilities <- c(3:9)
+results1 <- tibble(
+  r1 = rep(possibilities, 7*7),
+  r2 = rep(possibilities, each=7, 7),
+  r3 = rep(possibilities, each=7*7)
+)
+results1$start <- 7
+results1 <- results1 %>%
+  mutate(p1 = case_when(
+    r1 + start > 10 ~ r1 + start - 10,
+    TRUE ~ r1 + start
+  )) %>% 
+  mutate(p2 = case_when(
+    p1 + r2 > 10 ~ p1 + r2 - 10,
+    TRUE ~ p1 + r2
+  )) %>%
+  mutate(p3 = case_when(
+    p2 + r3 > 10 ~ p2 + r3 - 10,
+    TRUE ~ p2 + r3
+  )) %>%
+  mutate(score = p1+p2+p3)
+
+results1 %>% count(score)
+```
+
+```{r}
+results2 <- tibble(
+  r1 = rep(possibilities, 7*7),
+  r2 = rep(possibilities, each=7, 7),
+  r3 = rep(possibilities, each=7*7)
+)
+results2$start <- 3
+results2 <- results2 %>%
+  mutate(p1 = case_when(
+    r1 + start > 10 ~ r1 + start - 10,
+    TRUE ~ r1 + start
+  )) %>% 
+  mutate(p2 = case_when(
+    p1 + r2 > 10 ~ p1 + r2 - 10,
+    TRUE ~ p1 + r2
+  )) %>%
+  mutate(p3 = case_when(
+    p2 + r3 > 10 ~ p2 + r3 - 10,
+    TRUE ~ p2 + r3
+  )) %>%
+  mutate(score = p1+p2+p3)
+
+results2 %>% count(score)
+```
+
+```{r}
+comp <- tibble(score = c(results1$score, results2$score),
+               player = rep(c('1', '2'), each=nrow(results1)))
+comp %>%
+  ggplot(aes(score, color=player, fill=player)) + 
+  geom_density(alpha=.3) +
+  theme_classic()
+```
+
+
+
+```{r}
+
+move_Dirac <- function(object, ...) UseMethod('move_Dirac')
+move_Dirac.Player <- function(object, nums=c(3,3,3)) {
+  rsum <- sum(nums)
+  # shift position
+  pos <- object$position + rsum
+  if (pos > 10) {
+    pos <- pos %% 10
+    if (pos == 0) pos <- 10
+  }
+  object$position <- pos
+  object$score <- object$score + pos
+  return(object)
+}
+
+play_game <- function(player1, player2, rolls) {
+  
+  roll_idx <- 1
+  winner <- FALSE
+  while (!winner) {
+    r <- rolls[roll_idx,]
+    player1 <- move_Dirac(player1, r)
+    roll_idx <- roll_idx+1
+    if (roll_idx > nrow(rolls)) {
+      roll_idx <- 1
+      }
+    if (player1$score > 20) {
+      winner <- TRUE
+      print('Player 1 wins!')
+    } else {
+      r <- rolls[roll_idx,]
+      player2 <- move_Dirac(player2, r)
+      roll_idx <- roll_idx+1
+      if (roll_idx > nrow(rolls)) {
+        roll_idx <- 1
+      }
+    }
+    if (player2$score > 20) {
+      winner <- TRUE
+      print('Player 2 wins!')
+    } 
+  }
+  players <- c(player1, player2)
+  return(players)
+}
+```
+
+```{r}
+player1 <- init(player, start=7)
+player2 <- init(player, start=3)
+```
+
+```{r}
+g <- play_game(player1, player2, matrix(3, nrow=1, ncol=3))
+```
+
+```{r}
+# Solution from https://github.com/AdroMine/AdventOfCode/blob/main/2021/Day21/solution.R
+# Brute force option to iterate over all games, but create a dictionary 'cache'
+# to store calls to save time and not have to make new calcaultions for duplciate states
+
+# sample
+p1 <- 7 ; p2 <- 3
+
+# memoise fails to do anything, maybe using it incorrectly? even after setting
+# cachem manually to Inf, it still failed to run in proper time
+cache <- collections::dict()
+
+die_sums <- rowSums(expand.grid(1:3, 1:3, 1:3))
+die_rolls <- table(die_sums)
+die_sums <- unique(die_sums)
+
+game <- function(p1, p2, s1, s2){
+    
+    if(s1 >= 21){
+        return(c(1,0))
+    } 
+    if(s2 >= 21){
+        return(c(0,1))
+    }
+    key <- paste(p1, p2, s1, s2, sep = ":")
+    if(cache$has(key)){
+        return(cache$get(key))
+    }
+    
+    res <- c(0, 0)
+    
+    for(die in die_sums){
+        
+        new_pos <- ((p1 - 1) + die) %% 10 + 1
+        new_sc <- s1 + new_pos
+        k <-  rev(game(p2, new_pos, s2, new_sc)) * die_rolls[as.character(die)]
+        res <- res + k
+    }
+    cache$set(key, res)
+    res
+}
+
+as.character(max(game(p1, p2, 0, 0)))
+```
